fixed nav bar alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,9 +47,8 @@ body {
 }
 body {
   color: #fff;
-  text-align: center;
+  /*text-align: center;*/
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  width: 90%;
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -120,6 +119,7 @@ ul .btn{
 #brand {
   text-align: left;
   display: inline;
+  font-family: 'Pacifico', cursive;
 }
 /*
  * Header
@@ -139,7 +139,7 @@ ul .btn{
   display: inline-block;
 }
 .masthead-nav > li + li {
-  margin-left: 20px;
+  /*margin-left: 20px;*/
 }
 .masthead-nav > li > a {
   padding-right: 0;
@@ -213,6 +213,10 @@ ul .btn{
 .mastfoot {
   color: #999; /* IE8 proofing */
   color: rgba(255,255,255,.5);
+}
+
+.mastfoot .inner p {
+  text-align: center;
 }
 
 
